--- a/public/index.html
+++ b/public/index.html
@@ -24,26 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wave Portal</title>
-    <meta name="title" content="Wave Portal" />
-    <meta name="description" content="I want to meet you! Send me a wave now!" />
+    <title>Beg portal</title>
+    <meta name="title" content="Beg portal" />
+    <meta name="description" content="Pls beg for ETH" />
     
     <!-- Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Wave Portal">
-    <meta property="og:description" content="I want to meet you! Send me a wave now!">
+    <meta property="og:title" content="Beg portal">
+    <meta property="og:description" content="Pls beg for ETH">
     <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Wave Portal">
-    <meta property="twitter:description" content="I want to meet you! Send me a wave now!">
+    <meta property="twitter:title" content="Beg portal">
+    <meta property="twitter:description" content="Pls beg for ETH">
     <meta property="twitter:image"
       content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png">
   </head>
-  <body>
+  <body style="background-color: rebeccapurple;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
